{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 11,
  "lineage": "6642f3c4-994e-2913-6705-37a3f6362c9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:772908587816:instance/i-0b0102c52e70a0252",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0102c52e70a0252",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cicd-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cc75af57b03b40c6"
              }
            ],
            "primary_network_interface_id": "eni-0cc75af57b03b40c6",
            "private_dns": "ip-10-0-1-14.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-65-1-2-178.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.2.178",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01bf3317c7ab4aa52",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0436feb817511af39",
            "tags": {
              "Name": "ci-cd-docker-server"
            },
            "tags_all": {
              "Name": "ci-cd-docker-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0008873fe19df8f8e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "i-0b0102c52e70a0252",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772908587816:internet-gateway/igw-074e5c92a19ad8670",
            "id": "igw-074e5c92a19ad8670",
            "owner_id": "772908587816",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-igw"
            },
            "tags_all": {
              "Name": "ci-cd-igw"
            },
            "vpc_id": "vpc-0a3a067ac182c0efe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "igw-074e5c92a19ad8670",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772908587816:route-table/rtb-0c7898c827e684050",
            "id": "rtb-0c7898c827e684050",
            "owner_id": "772908587816",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074e5c92a19ad8670",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ci-cd-public-route-table"
            },
            "tags_all": {
              "Name": "ci-cd-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3a067ac182c0efe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "rtb-0c7898c827e684050",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffe1bcc269b5c44b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7898c827e684050",
            "subnet_id": "subnet-0436feb817511af39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "rtbassoc-0ffe1bcc269b5c44b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772908587816:security-group/sg-0008873fe19df8f8e",
            "description": "Security group for CI/CD application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0008873fe19df8f8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "13.207.69.183/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ci-cd-app-sg",
            "name_prefix": "",
            "owner_id": "772908587816",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ci-cd-app-sg"
            },
            "tags_all": {
              "Name": "ci-cd-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3a067ac182c0efe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "sg-0008873fe19df8f8e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772908587816:subnet/subnet-0436feb817511af39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0436feb817511af39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772908587816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-public-subnet"
            },
            "tags_all": {
              "Name": "ci-cd-public-subnet"
            },
            "vpc_id": "vpc-0a3a067ac182c0efe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "subnet-0436feb817511af39",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772908587816:vpc/vpc-0a3a067ac182c0efe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8dbbc0c93ca3d78",
            "default_route_table_id": "rtb-09468a9dcb70a6d7e",
            "default_security_group_id": "sg-0de8823348137467f",
            "dhcp_options_id": "dopt-04e625fea93534e5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3a067ac182c0efe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09468a9dcb70a6d7e",
            "owner_id": "772908587816",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-vpc"
            },
            "tags_all": {
              "Name": "ci-cd-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772908587816",
            "id": "vpc-0a3a067ac182c0efe",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}